--- a/certs.html
+++ b/certs.html
@@ -50,8 +50,10 @@
 								</header>
 								<div class="image main"><img src="images/Quantum Analytics Certificate - Data Analyst.jpg" alt="" /></div>
 								<!-- <div class="image main"><img src="images/cert1.jpg" alt="" /></div> -->
-								<div class="image main"><img src="images/cert2.jpg" alt="" /></div>
+								<div class="image main"><img src="images/PL300.png" alt="" /></div>
+								<div class="image main"><img src="images/MCP.png" alt="" /></div>
 								<!-- <div class="image main"><img src="images/pic01.jpg" alt="" /></div> -->
+								
 							</section>
 
 					</div>
